argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: le-clusterissuer
spec:
  rules:
  - host: argocd.rinzler.tech
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
  tls:
    - hosts:
      - argocd.rinzler.tech
      secretName: argocd-cert-manager-ctls
